[package]
name = "rusty_pipes"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "rusty_pipes"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.16.5", features = ["extension-module"] }
subprocess = "0.2.9"
serde = "1.0.147"
serde_json = "1.0.59"